<resources>
    <string name="app_name">BaseProjectMVVM-android</string>
    <string name="to_paging_example">To paging example</string>
    <string name="to_maps_example">To Maps Example</string>
    <string name="to_maps_satellite">To Maps Satellite Example</string>
    <string name="to_login_example">To Login Example</string>
    <string name="to_watermark_example">To Watermark Example</string>
    <string name="satellite">Map Satellite</string>
    <string name="map_default">Map Default</string>
    <string name="paging_user">Paging User</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_try_again">Try Again</string>
    <string name="txt_call">Call</string>
    <string name="txt_switch_camera">Switch Camera</string>
    <string name="to_face_detection">To Face detection</string>
    <string name="txt_face_detection">Face Detection</string>
    <string name="txt_open_camera">Open Camera</string>
    <string name="txt_text_recognition">Text Recognition</string>
    <string name="to_text_recognition">To Text Recognition</string>
    <string name="txt_object_detection">Object Detection</string>
    <string name="to_object_detection">To Object Detection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="galery">Galery</string>
    <string name="submit">Submit</string>
    <string name="choice_image">Choice Image</string>
    <string name="fitur">More Fitur</string>
    <string name="Delete">Delete</string>
</resources>