<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Muhammad Riza
  ~ Thursday, 3/2/2022
  ~ Copyright (c) 2022 by Gibox Digital Asia.
  ~ All Rights Reserve
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.watermark.GaleryActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_text"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:background="#33000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Muhammad Riza"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/txt_text_maps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#33000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Taken By Muhammad Riza"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="8dp"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/im_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_white"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/galery"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_choice_image"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/im_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_exit_black"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choice_image"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/txt_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp"
                android:text="0"
                android:textColor="@color/white"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/txt_title"
                app:layout_constraintRight_toLeftOf="@id/img_icon"
                />

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/image_gallery"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                app:tint="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>




        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            android:layout_marginBottom="8dp"/>


        <VideoView
            android:id="@+id/vv_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/fragment_container"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/_5sdp"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_submit">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:backgroundTint="@color/blue"
                android:src="@drawable/ic_fab_add"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:fabSize="normal"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="38dp"
                android:src="@drawable/ic_fab_image"
                android:visibility="invisible"
                app:backgroundTint="@color/blue"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/_28sdp"
                android:layout_marginBottom="90dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_fab_video"
                android:visibility="invisible"
                app:backgroundTint="@color/blue"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:tint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_8sdp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>